--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-pyrebase==3.0.27
+pyrebase>=3.0.0,<4.5.0
+firebase-admin==5.0.1
+opencv-python==4.5.3.56
+streamlit==0.87.0
+numpy==1.19.5
+tensorflow==2.5.0
+h5py==3.1.0
