--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 pyrebase==3.0.27
 firebase-admin==6.1.0
-opencv-python==4.7.0.72
+opencv-python
 streamlit==1.20.0
-numpy==1.19.3
+numpy
 tensorflow==2.12.0
 h5py==3.8.0
 datetime==5.1
