--- a/requirements.txt
+++ b/requirements.txt
@@ -95,7 +95,7 @@ platformdirs==3.1.1
 plotly==5.8.0
 prompt-toolkit==3.0.38
 proto-plus==1.22.2
-protobuf==3.20.3
+protobuf
 psutil==5.9.4
 pure-eval==0.2.2
 pyarrow==11.0.0
