--- a/requirements.txt
+++ b/requirements.txt
@@ -102,7 +102,7 @@ pyarrow==11.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
-pycryptodome==3.17
+pycryptodome
 pydantic==1.9.0
 pydeck==0.8.0
 Pygments==2.14.0
