--- a/requirements.txt
+++ b/requirements.txt
@@ -80,7 +80,7 @@ mdurl==0.1.2
 msgpack==1.0.5
 nest-asyncio==1.5.6
 numpy==1.22.1
-oauth2client==4.1.3
+oauth2client
 oauthlib==3.2.0
 opencv-python==4.5.5.62
 opt-einsum==3.3.0
