--- a/requirements.txt
+++ b/requirements.txt
@@ -120,7 +120,7 @@ pytz-deprecation-shim==0.1.0.post0
 pyzmq==25.0.2
 requests==2.28.2
 requests-oauthlib==1.3.1
-requests-toolbelt==0.10.1
+requests-toolbelt
 rich==13.3.3
 rsa==4.8
 semver==2.13.0
