--- a/requirements.txt
+++ b/requirements.txt
@@ -118,7 +118,7 @@ python-multipart==0.0.5
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
 pyzmq==25.0.2
-requests==2.28.2
+requests
 requests-oauthlib==1.3.1
 requests-toolbelt
 rich==13.3.3
