--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ attrs==22.2.0
 backcall==0.2.0
 blinker==1.5
 Brotli==1.0.9
-CacheControl==0.12.11
+CacheControl
 cachetools==5.0.0
 certifi==2021.10.8
 cffi==1.15.1
@@ -38,7 +38,7 @@ gast==0.5.3
 gcloud
 gitdb==4.0.10
 GitPython==3.1.31
-google-api-core==2.11.0
+google-api-core
 google-api-python-client==2.83.0
 google-auth==2.17.0
 google-auth-httplib2==0.1.0
@@ -46,7 +46,7 @@ google-auth-oauthlib==0.4.6
 google-cloud==0.34.0
 google-cloud-core==2.3.2
 google-cloud-firestore==2.10.1
-google-cloud-storage==2.8.0
+google-cloud-storage
 google-crc32c==1.5.0
 google-pasta==0.2.0
 google-resumable-media==2.4.1
