--- a/requirements.txt
+++ b/requirements.txt
@@ -1,159 +1,1 @@
-absl-py==1.0.0
-altair==4.2.2
-anyio==3.5.0
-asgiref==3.5.0
-asttokens==2.2.1
-astunparse==1.6.3
-attrs==22.2.0
-backcall==0.2.0
-blinker==1.5
-Brotli==1.0.9
-CacheControl
-cachetools==5.0.0
-certifi==2021.10.8
-cffi==1.15.1
-charset-normalizer==2.0.11
-click==8.0.3
-colorama==0.4.4
-comm==0.1.2
-cryptography==40.0.1
-cycler==0.11.0
-dash==2.4.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-debugpy==1.6.6
-decorator==5.1.1
-distlib==0.3.6
-entrypoints==0.4
-executing==1.2.0
-fastapi==0.73.0
-filelock==3.10.7
-firebase-admin==6.1.0
-Flask==2.1.2
-Flask-Compress==1.12
-flatbuffers==2.0
-fonttools==4.29.1
-gast==0.5.3
-gcloud
-gitdb==4.0.10
-GitPython==3.1.31
-google-api-core
-google-api-python-client==2.83.0
-google-auth==2.17.0
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.4.6
-google-cloud==0.34.0
-google-cloud-core==2.3.2
-google-cloud-firestore==2.10.1
-google-cloud-storage
-google-crc32c==1.5.0
-google-pasta==0.2.0
-google-resumable-media==2.4.1
-googleapis-common-protos==1.59.0
-grpcio==1.53.0
-grpcio-status==1.53.0
-h11==0.13.0
-h5py==3.6.0
-httplib2==0.22.0
-idna==3.3
-importlib-metadata==6.1.0
-ipykernel==6.21.3
-ipython==8.11.0
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-jsonschema==4.17.3
-jupyter_client==8.0.3
-jupyter_core==5.3.0
-jws==0.1.3
-keras==2.8.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.2
-libclang==13.0.0
-Markdown==3.3.6
-markdown-it-py==2.2.0
-MarkupSafe==2.1.1
-matplotlib==3.5.1
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-msgpack==1.0.5
-nest-asyncio==1.5.6
-numpy==1.22.1
-oauth2client
-oauthlib==3.2.0
-opencv-python==4.5.5.62
-opt-einsum==3.3.0
-p2j==1.3.2
-packaging==21.3
-pandas==1.5.3
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.0.1
-pipenv==2023.3.20
-platformdirs==3.1.1
-plotly==5.8.0
-prompt-toolkit==3.0.38
-proto-plus==1.22.2
-protobuf
-psutil==5.9.4
-pure-eval==0.2.2
-pyarrow==11.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pycryptodome
-pydantic==1.9.0
-pydeck==0.8.0
-Pygments==2.14.0
-PyJWT==2.6.0
-Pympler==1.0.1
-pyparsing==3.0.7
-Pyrebase==3.0.27
-Pyrebase4==4.6.0
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python-jwt==2.0.1
-python-multipart==0.0.5
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-pyzmq==25.0.2
-requests
-requests-oauthlib==1.3.1
-requests-toolbelt
-rich==13.3.3
-rsa==4.8
-semver==2.13.0
-six==1.16.0
-smmap==5.0.0
-sniffio==1.2.0
-stack-data==0.6.2
-starlette==0.17.1
-streamlit==1.20.0
-tenacity==8.0.1
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0
-tensorflow-io-gcs-filesystem==0.23.1
-tensorflow-serving-api==2.7.0
-termcolor==1.1.0
-tf-estimator-nightly==2.8.0.dev2021122109
-toml==0.10.2
-toolz==0.12.0
-tornado==6.2
-traitlets==5.9.0
-typing_extensions==4.0.1
-tzdata==2023.3
-tzlocal==4.3
-uritemplate==4.1.1
-urllib3==1.26.8
-uvicorn==0.17.3
-validators==0.20.0
-virtualenv==20.21.0
-virtualenv-clone==0.5.7
-watchdog==3.0.0
-wcwidth==0.2.6
-Werkzeug==2.0.2
-wrapt==1.13.3
-zipp==3.15.0
+pyrebase4==4.6.0
